@@ -38,8 +38,9 @@
 - Fix: [#19112] Text boxes not updated with empty strings in Track List, Server List, and Start Server windows.
 - Fix: [#19114] [Plugin] GameActionResult does not comply to API specification.
 - Fix: [#19136] SV6 saves with experimental RCT1 paths not imported correctly.
-- Fix: [#19250] MusicObjects do not free their preview images
-- Fix: [#19292] Overflow in totalRideValue
+- Fix: [#19250] MusicObjects do not free their preview images.
+- Fix: [#19292] Overflow in totalRideValue.
+- Fix: [#19379] "No platforms" station style shows platforms on the Junior Roller Coaster.
 - Fix: [#19380] Startup crash when no sequences are installed and random sequences are enabled.
 
 0.4.3 (2022-12-14)
